--- a/style.css
+++ b/style.css
@@ -5,19 +5,15 @@
 
 body {
   width: auto;
-  background-image: url('images/art-pencil-color-school-education-isolated-1588939-pxhere.com.jpg');
-  background-position: 30% 45%;
+  background-image: url('images/pixelsartcut.jpg');
+  background-attachment: fixed;
   background-size: cover;
   font-family: Fascinate;
 
 }
 
-header {
-  margin-top: 50px;
-}
-
 h1 {
-  font-size: 200px;
+  font-size: 70px;
   font-weight: 900;
   padding-top: 50px;
   text-align: center;
@@ -25,18 +21,15 @@ h1 {
   text-decoration: double;
 }
 
-
-
-
 #color-palette {
   text-align: center;
-  margin-top: 400px;
-  margin-bottom: 100px;
+  margin-top: 200px;
+  margin-bottom: 50px;
 }
 
 .color {
-  width: 80px;
-  height: 80px;
+  width: 40px;
+  height: 40px;
   border: white currentColor 1px;
   display: inline-block;
   margin: 10px;
@@ -45,13 +38,13 @@ h1 {
 
 .color:hover {
   opacity: 80%;
-  width: 82px;
-  height: 82px;
+  width: 42px;
+  height: 42px;
 }
 
 .selected {
-  width: 80px;
-  height: 80px;
+  width: 40px;
+  height: 40px;
   border: white currentColor 1px;
   display: inline-block;
   margin: 10px;
@@ -65,12 +58,12 @@ h1 {
 }
 
 .pixel-row {
-  height: 40px;
+  height: 30px;
 }
 
 .pixel {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border: black solid 2px;
   display: inline-block;
   background-color: white;
