--- a/style.css
+++ b/style.css
@@ -21,16 +21,25 @@ h1 {
   text-decoration: double;
 }
 
+#div-cores {
+  text-align: center;
+}
+
 #color-palette {
+  display: inline-block;
   text-align: center;
   margin-top: 200px;
   margin-bottom: 50px;
+  width: auto;
+  border: solid black 2px;
+  background-color: white;
+  border-radius: 20px;
 }
 
 .color {
   width: 40px;
   height: 40px;
-  border: white currentColor 1px;
+  border: black solid 1px;
   display: inline-block;
   margin: 10px;
   border-radius: 50%;
@@ -70,8 +79,6 @@ h1 {
 
 }
 
-
-
 #div-botao {
   text-align: center;
   padding-top: 20px;
@@ -79,23 +86,30 @@ h1 {
 
 #clear-board {
   text-align: center;
-  width: 200px;
-  height: 50px;
-  font-size: 25px;
-
+  width: auto;
+  height: auto;
+  padding: 5px;
+  font-size: 18px;
+  border-radius: 20px;
+  background-color: red;
+  border: red;
 }
 
 #board-size {
   width: 60px;
-  height: 50px;
+  height: 40px;
   font-size: 25px;
   text-align: center;
-  margin-left: 100px;
+  margin-left: 30px;
 }
 
 #generate-board {
   text-align: center;
-  width: 200px;
-  height: 50px;
-  font-size: 25px;
+  width: auto;
+  padding: 5px;
+  font-size: 18px;
+  border-radius: 20px;
+  background-color: green;
+  border: green;
+  margin-left: 15px;
 }
